--- a/scripts/6_figures.Rmd
+++ b/scripts/6_figures.Rmd
@@ -3341,10 +3341,7 @@ new_titles[1] <- "(b) Vitebsk, Belarus /\nSmolensk, Russia"
 new_titles[8] <- "(o) Orenburg, Russia /\nUralsk, Kazakhstan"
 
 age_t_bins <- lapply(1:11, function(i) {rast(paste0(p_dat_derived, "age_rasters/2017_bins/", site_df$site[i], "_y2017_bins.tif"))})
-
 names(age_t_bins) <- site_df$site
-
-
 
 # ----------------------------------------------------- #
 # horizontal
@@ -3356,45 +3353,46 @@ include_borders <- TRUE
   pdf(file = paste0(p_output, "plots/fig1", 
                     if(include_borders) {"_borders_simple2"},
                     ".pdf"),
-    width = 7, height = 6)
-par(mfrow = c(3, 4), 
-    # mar=c(0,0,0,0), 
-    oma=c(1,1,0,0), 
-    adj = 0,
-    cex.main = 1#,
-    # tcl = -0.2
-    )
-
-for (i in 1:11) {
-  terra::plot(age_t_bins[[i]], type = "classes",
-     levels = rcl_df$labels %>% unique() %>% .[-1],
-     col = viridis(n = 5, direction = -1), colNA = "gray95",
-     main = new_titles[i], #inset_map_titles[i],
-     legend = FALSE,
-     mar = c(mval+0.5, mval, mval + 1.2, mval) # bltr     
-     )
+      width = 7, height = 6)
   
-  if(include_borders) {
-    plot(world_states_simple %>%
-           {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
-           st_geometry(), add = T, border = "gray50")
+  par(mfrow = c(3, 4), 
+      # mar=c(0,0,0,0), 
+      oma=c(1,1,0,0), 
+      adj = 0,
+      cex.main = 1#,
+      # tcl = -0.2
+      )
+  
+  for (i in 1:11) {
+    terra::plot(age_t_bins[[i]], type = "classes",
+       levels = rcl_df$labels %>% unique() %>% .[-1],
+       col = viridis(n = 5, direction = -1), colNA = "gray95",
+       main = new_titles[i], #inset_map_titles[i],
+       legend = FALSE,
+       mar = c(mval+0.5, mval, mval + 1.2, mval) # bltr     
+       )
     
-    plot(states_union %>%
-           {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
-           st_geometry(), add = T, border = "black")
-    }
-
-}
-
-plot.new()
-plot(age_t_bins[[i]], type = "classes",
-     levels = rcl_df$labels %>% unique() %>% .[-1],
-       legend = "left", legend.shrink = 5,
-       plg = list(cex = 2),
-       col = viridis(n = 5, direction =  -1), colNA = "gray95",
-     legend.only = TRUE)
-
-dev.off()
+    if(include_borders) {
+      plot(world_states_simple %>%
+             {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
+             st_geometry(), add = T, border = "gray50")
+      
+      plot(states_union %>%
+             {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
+             st_geometry(), add = T, border = "black")
+      }
+  
+  }
+  
+  plot.new()
+  plot(age_t_bins[[i]], type = "classes",
+       levels = rcl_df$labels %>% unique() %>% .[-1],
+         legend = "left", legend.shrink = 5,
+         plg = list(cex = 2),
+         col = viridis(n = 5, direction =  -1), colNA = "gray95",
+       legend.only = TRUE)
+  
+  dev.off()
 
 
 }
@@ -3422,52 +3420,63 @@ dev.off()
 ```
 
 ```{r fig1-max-age-maps}
+max_age_t_bins <- lapply(1:11, function(i) {rast(paste0(p_dat_derived, "max_age/bins/", site_df$site[i], "_max_age_bins.tif"))})
+names(max_age_t_bins) <- site_df$site
+
+
+
+
+mval <- 1
 include_borders <- FALSE
 
 {
   pdf(file = paste0(p_output, "plots/", run_label, "/maps/max_age_maps", 
                     if(include_borders) {"_borders"},
                     ".pdf"),
-    width = 8, height = 6.6)
-par(mfrow = c(3, 4), 
-    # mar=c(0,0,0,0), 
-    oma=c(1,1,0,0), 
-    # adj = 0,
-    cex.main = 0.9#,
-    # tcl = -0.2
-    )
-
-for (i in 1:11) {
-  terra::plot(max_age_t_bins[[i]], type = "classes",
-     levels = rcl_df$labels %>% unique() %>% .[-1],
-     col = viridis(n = 5, direction = -1), colNA = "gray95",
-     main = inset_map_titles[i],
-     legend = FALSE,
-     mar = c(mval+0.5, mval, mval + 1.2, mval) # bltr     
-     )
+    width = 7, height = 6)
   
-  if(include_borders) {
-    plot(world_states %>%
-           {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
-           st_geometry(), add = T, border = "gray50")
+  par(mfrow = c(3, 4), 
+      # mar=c(0,0,0,0), 
+      oma=c(1,1,0,0), 
+      adj = 0,
+      cex.main = 1#,
+      # tcl = -0.2
+      )
+  
+  for (i in 1:11) {
+    terra::plot(max_age_t_bins[[i]], type = "classes",
+       levels = rcl_df$labels %>% unique() %>% .[-1],
+       col = viridis(n = 5, direction = -1), colNA = "gray95",
+       main = new_titles[i], #inset_map_titles[i],
+       legend = FALSE,
+       mar = c(mval+0.5, mval, mval + 1.2, mval) # bltr     
+       )
     
-    plot(world_10 %>%
-           {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
-           st_geometry(), add = T, border = "black")
-    }
+    if(include_borders) {
+      plot(world_states %>%
+             {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
+             st_geometry(), add = T, border = "gray50")
+      
+      plot(world_10 %>%
+             {if (i == 6) . else  st_crop(., extent(site_sf[i, ]))} %>%
+             st_geometry(), add = T, border = "black")
+      }
+  
+  }
+
+
+  plot.new()
+  plot(max_age_t_bins[[i]], type = "classes",
+       levels = rcl_df$labels %>% unique() %>% .[-1],
+         legend = "left", legend.shrink = 5,
+         plg = list(cex = 2),
+         col = viridis(n = 5, direction =  -1), colNA = "gray95",
+       legend.only = TRUE)
+  
+  dev.off()
 
 }
 
-plot.new()
-plot(max_age_t_bins[[i]], type = "classes",
-     levels = rcl_df$labels %>% unique() %>% .[-1],
-       legend = "right", legend.shrink = 5,
-       plg = list(cex = 2.5),
-       col = viridis(n = 5, direction =  -1), colNA = "gray95",
-     legend.only = TRUE)
-
-dev.off()
-}
 
 ```
 
